# rufus-sdk

./: .coverage  .env  .env.example  .gitignore  0001-fix-Complete-async-step-execution-in-Celery-workers.patch  ALEMBIC_MIGRATION_PLAN.md  API_REFERENCE.md  ARCHITECTURE_REVIEW_RESPONSE.md  AUTO_EXECUTE_IMPLEMENTATION.md  AUTO_INIT_IMPLEMENTATION.md  CELERY_EDGE_INTEGRATION.md  CELERY_EDGE_SUMMARY.md  CELERY_IMPLEMENTATION_PLAN.md  CELERY_IMPLEMENTATION_SUMMARY.md  CELERY_WORKER_IMPROVEMENTS.md  CLAUDE.md  CLI_ENHANCEMENT_PLAN.md  CLI_PHASE1_AND_2_STATUS.md  CLI_PHASE1_STATUS.md  CLI_PHASE3_STATUS.md  CLI_REFERENCE.md  CONFUCIUS_VS_RUFUS_ANALYSIS.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  GEMINI.md  GITHUB_INSTALL_QUICKSTART.md  GPU_OLLAMA_IMPLEMENTATION_PLAN.md  INSTALLATION_FOR_DEVELOPERS.md  LICENSE  LOAD_TEST_FIXES.md  MANIFEST.in  MIGRATION_GUIDE.md  MISSING_FEATURES_PLAN.md  Makefile  NOTICE  PHASE3_GO_NO_GO_DECISION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS.md  PR_DESCRIPTION.md  PR_DESCRIPTION.txt  (+46 more)
.claude/: TECHNICAL_INFORMATION.md  agent_standard_operating_procedure.md  vision_browser_demo_idea.md  vision_idea.md  vision_idea_plan.md
config/: config_rollout_workflow.yaml  deployment_monitor.yaml  fraud_screening_workflow.yaml  payment_workflow.yaml  policy_rollout_workflow.yaml  workflow_registry.yaml
cookiecutter-rufus-package/: cookiecutter.json
cookiecutter-rufus-package/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
cookiecutter-rufus-package/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  steps.py
debugging/: README.md  setup_workflow.sh  test.db  test_workflow.yaml
docker/: .env.example  ARCHITECTURE.md  Dockerfile.celery-worker  Dockerfile.rufus-dashboard-prod  Dockerfile.rufus-dashboard-test  Dockerfile.rufus-edge-dev  Dockerfile.rufus-flower-prod  Dockerfile.rufus-server  Dockerfile.rufus-server-alembic  Dockerfile.rufus-server-local  Dockerfile.rufus-server-prod  Dockerfile.rufus-worker-gpu  Dockerfile.rufus-worker-local  Dockerfile.rufus-worker-ollama  Dockerfile.rufus-worker-prod  Dockerfile.rufus-worker-production  Dockerfile.ruvon-dashboard-prod  Dockerfile.ruvon-dashboard-test  Dockerfile.ruvon-edge-dev  Dockerfile.ruvon-flower-prod  Dockerfile.ruvon-server  Dockerfile.ruvon-server-alembic  Dockerfile.ruvon-server-local  Dockerfile.ruvon-server-prod  Dockerfile.ruvon-worker-local  Dockerfile.ruvon-worker-prod  Dockerfile.server  PRODUCTION-DEPLOYMENT.md  README.md  SCALING.md  build-production-images.sh  docker-compose.gpu.yml  docker-compose.production.yml  docker-compose.user-deployment.yml  docker-compose.yml  (+5 more)
examples/edge_deployment/fraud_scorer/: Cargo.toml
examples/edge_deployment/fraud_scorer/src/: main.rs
original_implementation_files/: API_REFERENCE.md  CLAUDE.md  Dockerfile  GEMINI.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  INFO_DOC.md  LOAN_WORKFLOW_TEST_RESULTS.md  PROGRESS_EVALUATION.md  PROJECT_REVIEW.md  Project_Status_Audit.md  README.md  SAGA_COMPENSATION_ADDED.md  TECHNICAL_DOCUMENTATION.md  TEST_RESULTS.md  THE_FUTURE_OF_CONFUCIUS.md  THE_FUTURE_OF_CONFUCIUS_Continued.md  UI_ASYNC_TEST_SUMMARY.md  UI_DYNAMIC_FORMS_VERIFICATION.md  UI_ENHANCEMENTS.md  UPGRADE_GUIDE.md  USAGE_GUIDE.md  YAML_GUIDE.md  celery_setup.py  celery_worker.py  celerybeat-schedule  conftest.py  confucius.postman_collection.json  docker-compose.onsite.yml  docker-compose.yml  hybrid_event_driven_workflow_idea copy.md  hybrid_sub_workflow_idea.md  load_workflow_debug.py  main.py  market_research.md  pyproject.toml  reaching_the_future.md  requirements-dev.txt  requirements.txt  sample.env.local  (+17 more)
original_implementation_files/config/: compliance_review.yaml  onboarding_workflow.yaml  super_workflow.yaml  todo_workflow.yaml
original_implementation_files/docs/archive/: technical_docs.md  workflow.md
original_implementation_files/migrations/: 001_init_postgresql_schema.sql  002_add_scheduled_workflows.sql  003_add_rbac_fields.sql  004_add_encryption.sql  005_add_worker_registry.sql
original_implementation_files/old/: agent.py  config.py  newsletter1.md  redis_listener.py
original_implementation_files/old/agents/: base_agent.py  ocr_agent.py  test.json
original_implementation_files/old/models/: agent.py  settings.py
original_implementation_files/old/routers/: agents.py  collections.py  history.py
original_implementation_files/old/services/: ollama.py  redis_service.py
original_implementation_files/old/tasks/: tasks.py
original_implementation_files/old/utils/: llm_util.py  minio_util.py  sample_route.py
original_implementation_files/scripts/: run_migration_002.py
original_implementation_files/services/metrics-service/: README.md  package.json
original_implementation_files/services/metrics-service/src/: index.js
original_implementation_files/services/retry-service/: README.md  package-lock.json
original_implementation_files/services/retry-service/src/: bridge.js  config.js
original_implementation_files/src/confucius/: crypto_utils.py  events.py  expression_evaluator.py  models.py  observability.py  persistence.py  postgres_executor.py  routers.py  routers.py.bak  semantic_firewall.py  templating.py  workflow_loader.py
original_implementation_files/src/confucius/contrib/static/css/: style.css
original_implementation_files/src/confucius_workflow.egg-info/: PKG-INFO  requires.txt
original_implementation_files/steps/: gears_test.py  kyc.py  loan.py
original_implementation_files/tests/: scheduled_report_models.py  scheduled_report_utils.py  test_audit_logging.py  test_celery_connection.py  test_full_system.py  test_input_model.py  test_integration.py  test_workflow.py  test_workflow_loader.py
original_implementation_files/tests/config/: test_scheduler_workflow.yaml  testing_child_workflow.yaml
rufus-slack/: README.md  pyproject.toml
rufus-slack/rufus_slack/: __init__.py  steps.py
rufus-slack/rufus_slack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rufus/wasm_component/sovereign_dispatcher/: Cargo.toml
(+846 files in other folders)
