[tool.poetry]
name = "rufus-edge"
version = "0.1.0"
description = "Python-native workflow engine for fintech edge devices - POS terminals, ATMs, mobile readers"
authors = ["Rufus Team <team@rufus.dev>"]
readme = "README.md"
homepage = "https://github.com/KamikaziD/rufus-sdk"
repository = "https://github.com/KamikaziD/rufus-sdk"
keywords = ["workflow", "fintech", "pos", "edge", "offline", "store-and-forward", "saga", "payment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "rufus", from = "src" },
    { include = "rufus_edge", from = "src" },
    { include = "rufus_cli", from = "src" },
    { include = "rufus_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies (required)
pydantic = "^2.0"
PyYAML = "^6.0"
jinja2 = "^3.1.2"
typer = "^0.21"
aiosqlite = "^0.19"
orjson = "^3.9"
httpx = "^0.25"
cryptography = "^41.0"
sqlalchemy = "^2.0"
alembic = "^1.13"

# Optional dependencies
fastapi = {version = "^0.100", optional = true}
uvicorn = {version = "^0.20", optional = true}
asyncpg = {version = "^0.27", optional = true}
rich = {version = "^13.0", optional = true}
uvloop = {version = "^0.19", optional = true}
slowapi = {version = "^0.1", optional = true}

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "slowapi"]
postgres = ["asyncpg"]
cli = ["rich"]
performance = ["uvloop"]
all = ["fastapi", "uvicorn", "asyncpg", "rich", "uvloop", "slowapi"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
pytest-mock = "^3.12"
flake8 = "^6.0"
black = "^23.0"
mypy = "^1.0"

[tool.poetry.scripts]
rufus = "rufus_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/rufus --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
