[tool.poetry]
name = "rufus-sdk"
version = "0.3.3"
description = "Python-native workflow engine for fintech edge devices - POS terminals, ATMs, mobile readers"
authors = ["Rufus Team <team@rufus.dev>"]
readme = "README.md"
homepage = "https://github.com/KamikaziD/rufus-sdk"
repository = "https://github.com/KamikaziD/rufus-sdk"
keywords = ["workflow", "fintech", "pos", "edge", "offline", "store-and-forward", "saga", "payment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "rufus", from = "src" },
    { include = "rufus_edge", from = "src" },
    { include = "rufus_cli", from = "src" },
    { include = "rufus_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies (required)
pydantic = "^2.0"
PyYAML = "^6.0"
jinja2 = "^3.1"
typer = ">=0.21"
click = "^8.0"
aiosqlite = ">=0.19"
anyio = "^4.0"
orjson = "^3.9"
httpx = ">=0.25"
cryptography = ">=41.0"
sqlalchemy = "^2.0"
alembic = "^1.13"
python-dotenv = "^1.0"
typing-extensions = "^4.0"
annotated-types = ">=0.5"
jsonschema = "^4.17,<5.0"

# Workflow scheduling
croniter = ">=2.0"

# Celery distributed execution (optional)
celery = {version = "^5.3", optional = true}
redis = {version = "^5.0", optional = true}
psycopg2-binary = {version = "^2.9", optional = true}
prometheus-client = {version = "^0.19", optional = true}

# Edge device support (optional but recommended)
websockets = {version = "^12.0", optional = true}
psutil = {version = "^5.9", optional = true}
numpy = {version = "^1.24", optional = true}

# Server dependencies (optional)
fastapi = {version = "^0.100", optional = true}
uvicorn = {version = "^0.20", optional = true}
starlette = {version = "^0.27", optional = true}
slowapi = {version = "^0.1", optional = true}
asyncpg = {version = "^0.27", optional = true}

# CLI and performance (optional)
rich = {version = "^13.0", optional = true}
uvloop = {version = "^0.19", optional = true}

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "starlette", "slowapi"]
postgres = ["asyncpg"]
cli = ["rich"]
performance = ["uvloop"]
edge = ["websockets", "psutil", "numpy"]
celery = ["celery", "redis", "psycopg2-binary", "prometheus-client"]
all = ["fastapi", "uvicorn", "starlette", "slowapi", "asyncpg", "rich", "uvloop", "websockets", "psutil", "numpy", "celery", "redis", "psycopg2-binary", "prometheus-client"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
pytest-mock = "^3.12"
flake8 = "^6.0"
black = "^23.0"
mypy = "^1.0"

[tool.poetry.scripts]
rufus = "rufus_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/rufus --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
