[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "Rufus marketplace package for {{ cookiecutter.project_name }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}" }
]
license = "{{ cookiecutter.license }}"
dependencies = [
    "rufus",
    "pydantic"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points."rufus.steps"]
{{ cookiecutter.step_type_name_example }} = "{{ cookiecutter.package_name }}.steps:MySampleStep"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"] # Line too long, handled by line-length
