[package]
name = "fraud-scorer"
version = "1.0.0"
edition = "2021"

# Compiled to WASI for on-device ML scoring:
#   rustup target add wasm32-wasip1
#   cargo build --target wasm32-wasip1 --release
#   cp target/wasm32-wasip1/release/fraud-scorer.wasm ../fraud_scorer.wasm

[[bin]]
name = "fraud-scorer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # optimise for binary size
lto = true
codegen-units = 1
panic = "abort"     # no unwinding — required for WASI
strip = true
