[package]
name = "sovereign-dispatcher"
version = "0.1.0"
edition = "2021"
description = "Rufus Sovereign Dispatcher — parallel Wasmtime batch executor for edge device fleets"

[[bin]]
name = "sovereign-dispatcher"
path = "src/main.rs"

[dependencies]
serde_json = "1"
wasmtime = { version = "27", default-features = false, features = ["cranelift", "component-model"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
